# pico_dm_qd3503728_awtk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_rp2040.sh  build_rp2350_arm.sh  build_rp2350_riscv.sh  debug.sh  gdb.init  start_debug.sh  upload.sh
cmake/: include_path.cmake
docs/: notes.md
src/: CMakeLists.txt
src/awtk-port/: awtk_config.h  lcd_pico.c  main_loop_pico.c  platform.c
src/board/: CMakeLists.txt  system_main.c
src/board/config/: DEV_Config.c
src/board/lcd/: LCD_Touch.c  LCD_Touch.h  ili9488.c  ili9488.h
src/board/sdcard/: MMC_SD.h
src/demos/: CMakeLists.txt  README.md
src/demos/hello/: .gitignore  project.json
src/demos/hello/design/default/ui/: home_page.xml
src/tests/: CMakeLists.txt  test_main.c
